--- a/week1-day2-html-css/bio.html
+++ b/week1-day2-html-css/bio.html
@@ -2,48 +2,7 @@
 <html>
 <head>
     <title>About Me:Arash Saeedi</title>
-<style>
-html{
-  background-color:gold;
-}
-
-head{
-  background-color: #333333;
-}
-h1 {
-    color:blue;
-    font-size: 28px;
-    border: 1px solid dodgerblue;
-    padding: 20px;
-    text-align: center;
-}
-body {
-  margin: 0;
-  padding: 0;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-/* Create three equal columns that floats next to each other.  Found this on W3 schools.com   */
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 10px;
-  height: 300px; /* I previously had it under text-align but that didnt look good on the firsdt try.
-  went to W3 and found these examples to work with.  The float makes better sense than text-align for sure I just will
-  have to practice more to understand the numbers. */
-}
-
-/* Clear floats after the columns I understand the div class labeling below which seperates each section for this example
-but what I cant fully understand is why the row class is for all of the div section and it only used the first column in this
-I beleive it is because it says row:after command. */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-</style>
+<link rel = "stylesheet" href = "css/style.css">
 </head>
 
 <body>
